# BLK-BK-11-EMU

./: Makefile.in  README.txt  access.c  bkplip.c  boot.c  conf.c  conf.h  configure  configure.ac  covox.c  cpu-ill.c  cpu.c  defines.h  disas.c  disk.c  emutypes.h  event.c  install-sh  io.c  kbd.h  libintl.h  main.c  maketape.c  mmap_emu.c  mmap_emu.h  mouse.c  pngtorgba.c  printer.c  readtape.c  scr.c  sdl_input.c  sdl_sound.c  serial.c  sim_disk.c  sim_tape.c  synth.c  tape.c  terakcons.c  terakdisk.c  timer.c  (+2 more)
Experimental Android Port/: experimental_tenga_cpu.java
po/: Makefile.in  POTFILES.in
